2023-10-04T16:12:13Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6408663328 # 1220
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-04
* notice: last 14d: unq all: 4 36
* notice: prev accum: outdated-unq outdated-all / unq all: 642 1012 / 666 1050
* notice: next accum: outdated-unq outdated-all / unq all: 644 1015 / 666 1051
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +4 -0 -0 / 2 4
* notice: removed / changed dates: [2023-09-20] / [2023-10-04]

2023-10-04T08:12:36Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6403319295 # 1219
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-04
* notice: last 14d: unq all: 4 36
* notice: prev accum: outdated-unq outdated-all / unq all: 642 1012 / 664 1047
* notice: next accum: outdated-unq outdated-all / unq all: 642 1012 / 666 1050
* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -1 -2 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2023-09-20 2023-10-04]

2023-10-04T00:42:05Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6400057870 # 1218
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-04
* notice: last 14d: unq all: 4 35
* notice: prev accum: outdated-unq outdated-all / unq all: 640 1009 / 664 1047
* notice: next accum: outdated-unq outdated-all / unq all: 642 1012 / 664 1047
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-09-19] / []

2023-10-03T16:11:56Z: