@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-10-04T16:12:13Z",
+  "timestamp" : "2023-10-05T08:12:46Z",
   "count_outdated" : 1015,
   "uniques_outdated" : 644,
-  "count" : 1051,
-  "uniques" : 666,
+  "count" : 1053,
+  "uniques" : 668,
   "clones" : [
     {
       "timestamp": "2023-09-21T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -127,6 +127,15 @@
       "count": 4,
       "count_minmax": [ 3, 4 ],
       "count_decinc": [ 0, 4 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-10-05T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
