@@ -1,10 +1,10 @@
 {
-  "count": 36,
+  "count": 37,
   "uniques": 4,
   "clones": [
     {
       "timestamp": "2023-09-21T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -70,6 +70,11 @@
     {
       "timestamp": "2023-10-04T00:00:00Z",
       "count": 4,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2023-10-05T00:00:00Z",
+      "count": 2,
       "uniques": 2
     }
   ]
