@@ -1,3 +1,12 @@
+2023-10-05T08:12:46Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6416393580 # 1222
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-05
+* notice: last 14d: unq all: 4 37
+* notice: prev accum: outdated-unq outdated-all / unq all: 644 1015 / 666 1051
+* notice: next accum: outdated-unq outdated-all / unq all: 644 1015 / 668 1053
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -1 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2023-09-21 2023-10-05]
+
 2023-10-04T16:12:13Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6408663328 # 1220
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-04
